# pynan

./: README.md  demo.ipynb  pyproject.toml
pynan/: __init__.py  utils.py  viz.py
tests/: test_pynan.py
