[tool.poetry]
name = "pynan"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25.3"
jupyterlab = "^1.2.4"
plotly = "4.4.1"
ipywidgets = ">=7.2"
webcolors = "^1.10"
loguru = "^0.4.0"
pandas-flavor = "^0.2.0"
xlrd = "^1.2.0"
pyprojroot = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.4.4"
isort = "^4.3.21"
ipdb = "^0.12.3"
jupyterlab = "^1.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
